Agrego una petición GET que filtra la lista de todos los autos sugún los datos que le envío. Implemento manejo de Email para notificar al usuario por ahí.